Bug 156167 - SVG: css should be case insensitive
Summary: SVG: css should be case insensitive
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-05 10:45 UTC by Xisco Faulí
Modified: 2023-07-06 15:18 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
sample file (571 bytes, image/svg+xml)
2023-07-05 10:45 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-07-05 10:45:58 UTC
Created attachment 188216 [details]
sample file

Based on https://bz.apache.org/ooo/show_bug.cgi?id=125332

Steps to reproduce:
1. Open attached document

-> The three circles should be orange. 2 are red instead.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f1012806f5cf2cd53e52d8f2a95c09a2215efbc
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2023-07-06 12:37:00 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/04c78e1a46a423071d7ea68724525ec7ef92e0e8

tdf#156167: create separate map for case insensitive strings

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-07-06 15:18:28 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/0b0e2e1660cb43608f6c8d2d7264dda9857a6e82

tdf#156167: create separate map for case insensitive strings

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.