tdf#156167: create separate map for case insensitive strings

Add static_assert to make sure both maps have the same size

Regression from:
    svgio: use "frozen" for mapping between token strings and enums

    Change-Id: I2061606146cfcb34169dccf69b6f720727839d04
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153174
    Tested-by: Jenkins
    Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>

Change-Id: Ic54dfe45eaff5ef75bcd4ebab715f278540da913
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154055
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>