svgio/qa/cppunit/SvgImportTest.cxx
@@ -505,6 +505,25 @@ CPPUNIT_TEST_FIXTURE(Test, testTdf156018)
     assertXPath(pDocument, "/primitive2D/transform/polypolygoncolor[2]", "color", "#0000ff");
 }
 
+CPPUNIT_TEST_FIXTURE(Test, testTdf156167)
+{
+    Primitive2DSequence aSequence = parseSvg(u"/svgio/qa/cppunit/data/tdf156167.svg");
+    CPPUNIT_ASSERT_EQUAL(1, static_cast<int>(aSequence.getLength()));
+
+    drawinglayer::Primitive2dXmlDump dumper;
+    xmlDocUniquePtr pDocument = dumper.dumpAndParse(aSequence);
+
+    CPPUNIT_ASSERT (pDocument);
+
+    assertXPath(pDocument, "/primitive2D/transform/polypolygoncolor[1]", "color", "#ffa500");
+
+    // Without the fix in place, this test would have failed with
+    // - Expected: #ffa500
+    // - Actual  : #ff0000
+    assertXPath(pDocument, "/primitive2D/transform/polypolygoncolor[2]", "color", "#ffa500");
+    assertXPath(pDocument, "/primitive2D/transform/polypolygoncolor[3]", "color", "#ffa500");
+}
+
 CPPUNIT_TEST_FIXTURE(Test, testTdf155932)
 {
     Primitive2DSequence aSequence = parseSvg(u"/svgio/qa/cppunit/data/tdf155932.svg");
